; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_http.c_evhttp_maybe_add_content_length_header.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_http.c_evhttp_maybe_add_content_length_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evkeyvalq = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"Transfer-Encoding\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"Content-Length\00", align 1
@EV_SIZE_FMT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evkeyvalq*, i64)* @evhttp_maybe_add_content_length_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evhttp_maybe_add_content_length_header(%struct.evkeyvalq* %0, i64 %1) #0 {
  %3 = alloca %struct.evkeyvalq*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [22 x i8], align 16
  store %struct.evkeyvalq* %0, %struct.evkeyvalq** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.evkeyvalq*, %struct.evkeyvalq** %3, align 8
  %7 = call i32* @evhttp_find_header(%struct.evkeyvalq* %6, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load %struct.evkeyvalq*, %struct.evkeyvalq** %3, align 8
  %11 = call i32* @evhttp_find_header(%struct.evkeyvalq* %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %9
  %14 = getelementptr inbounds [22 x i8], [22 x i8]* %5, i64 0, i64 0
  %15 = load i32, i32* @EV_SIZE_FMT, align 4
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @EV_SIZE_ARG(i64 %16)
  %18 = call i32 @evutil_snprintf(i8* %14, i32 22, i32 %15, i32 %17)
  %19 = load %struct.evkeyvalq*, %struct.evkeyvalq** %3, align 8
  %20 = getelementptr inbounds [22 x i8], [22 x i8]* %5, i64 0, i64 0
  %21 = call i32 @evhttp_add_header(%struct.evkeyvalq* %19, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  br label %22

22:                                               ; preds = %13, %9, %2
  ret void
}

declare dso_local i32* @evhttp_find_header(%struct.evkeyvalq*, i8*) #1

declare dso_local i32 @evutil_snprintf(i8*, i32, i32, i32) #1

declare dso_local i32 @EV_SIZE_ARG(i64) #1

declare dso_local i32 @evhttp_add_header(%struct.evkeyvalq*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
